content/core/1.8.0/reference/vendr-core-api/ivendrapi.md
---
title: IVendrApi
description: API reference for IVendrApi in Vendr, the eCommerce solution for Umbraco v8+
---
## IVendrApi

```csharp
public interface IVendrApi : ICountryService, ICurrencyService, IDiscountService, 
    IEmailTemplateService, IExportTemplateService, IGiftCardService, IOrderService, 
    IOrderStatusService, IPaymentMethodService, IPrintTemplateService, IProductAttributeService, 
    IProductService, ISessionManager, IShippingMethodService, IStoreService, ITaxService
```

**Inheritance**

* interface [ICountryService](../../vendr-core-services/icountryservice/)
* interface [ICurrencyService](../../vendr-core-services/icurrencyservice/)
* interface [IDiscountService](../../vendr-core-services/idiscountservice/)
* interface [IEmailTemplateService](../../vendr-core-services/iemailtemplateservice/)
* interface [IExportTemplateService](../../vendr-core-services/iexporttemplateservice/)
* interface [IGiftCardService](../../vendr-core-services/igiftcardservice/)
* interface [IOrderService](../../vendr-core-services/iorderservice/)
* interface [IOrderStatusService](../../vendr-core-services/iorderstatusservice/)
* interface [IPaymentMethodService](../../vendr-core-services/ipaymentmethodservice/)
* interface [IPrintTemplateService](../../vendr-core-services/iprinttemplateservice/)
* interface [IProductAttributeService](../../vendr-core-services/iproductattributeservice/)
* interface [IProductService](../../vendr-core-services/iproductservice/)
* interface [ISessionManager](../../vendr-core-session/isessionmanager/)
* interface [IShippingMethodService](../../vendr-core-services/ishippingmethodservice/)
* interface [IStoreService](../../vendr-core-services/istoreservice/)
* interface [ITaxService](../../vendr-core-services/itaxservice/)

**Namespace**
* [Vendr.Core.Api](../)

### Properties

#### Log

```csharp
public ILogger Log { get; }
```


---

#### Uow

```csharp
public IUnitOfWorkProvider Uow { get; }
```


<!-- DO NOT EDIT: generated by xmldocmd for Vendr.Core.dll -->
